# health-manager

./: .gitignore  .pre-commit-config.yaml  .template.env  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requiremenets.txt  requirements.txt
.cursor/rules/techstack/: backend-simple.mdc
.github/workflows/: build-push.yml  main.yml
src/: types.py
src/core/: const.py  dto.py  entity.py  exception.py  filters.py  log.py  models.py  singleton.py  types.py  value_object.py
src/core/api/pagination/: __init__.py  custom.py  ninja_fix.py
src/core/db/: __init__.py  connection.py  fields.py  models.py  transaction.py
src/core/dto/: __init__.py  base.py  types.py
src/core/validator/: base.py  macro.py  time.py
src/main/: api.py  asgi.py  run.py  settings.py  urls.py  wsgi.py
src/myauth/: api.py  apps.py  auth.py  dto.py  exception.py  middleware.py  service.py
src/myauth/clients/: base.py  supabase.py
src/myauth/entity/: auth.py  token.py  user.py
src/myauth/validator/: auth.py  token.py
src/plans/: api.py  apps.py  dto.py  models.py
src/plans/migrations/: 0001_initial.py  0002_alter_meal_carb_alter_meal_fat_alter_meal_kcal_and_more.py
src/plans/services/: meal.py  plan.py
src/plans/tests/: conftest.py
src/plans/tests/integration/: test_service.py
src/plans/tests/units/: test_plans.py
src/plans/validator/: plan.py
src/profiles/: middleware.py  models.py  service.py  validator.py
src/profiles/migrations/: 0001_initial.py
src/profiles/tests/: conftest.py
src/profiles/tests/integration/: test_service.py
