[project]
name = "helath-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django-ninja>=1.3.0",
    "logfire[asgi,django]>=2.11.0",
    "psycopg-binary>=3.2.3",
    "psycopg[pool]>=3.2.3",
    "uvicorn>=0.34.0",
]
